apps/base/zilean/zilean-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: zilean-pgadmin
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: zilean-pgadmin
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zilean-pgadmin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zilean-pgadmin
  template:
    metadata:
      labels:
        app: zilean-pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
            - name: pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
            - name: pgadmin-config
              mountPath: /pgpass
              subPath: pgpass
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: zilean-pgadmin-data
        - name: pgadmin-config
          secret:
            secretName: zilean-pgadmin-config
