apps/base/zilean/zilean-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: zilean-postgres
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: zilean-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zilean-postgres
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zilean-postgres
  template:
    metadata:
      labels:
        app: zilean-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zilean-postgres-data
